# mypypp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: main.yaml  publish.yaml  test.yaml
src/mypypp/: deprecated.py
tests/: mypy.ini
tests/integration/: test_deprecated.yaml
tests/unit/: errorcodes_test.py
